# Repwise

./: .bandit  .dockerignore  .easignore  .env.backend  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  COMPLETE-FIX.sh  Dockerfile  IMPLEMENTATION-COMPLETE.md  LAUNCH-CHECKLIST.md  Makefile  README.md  RESTART-BACKEND.sh  SECURITY.md  _write_seed.py  alembic.ini  api_e2e_test.py  api_test.sh  build-check-log.md  commit-all.sh  pyproject.toml  railway.toml
app/: .env.example  .eslintrc.js  .gitignore  App.tsx  app.config.js  app.json  eas.json  global.d.ts  index.js  jest.config.js  metro.config.js  package.json  playwright.config.ts  tsconfig.json
docs/: 6-FEATURES-IMPLEMENTATION-PLAN.md  ALL-PHASES-COMPLETE-FINAL.md  AUDIT_FIX_PLAN.md  BUG-FIX-TRACKER.md  CALORIE-GOALS-DIFFERENCE.md  COMPLETE-APP-ANALYSIS.md  COMPLETE-IMPLEMENTATION-SUMMARY.md  CRITICAL-BUGS-FIXED.md  DB_SCHEMA_FIX_PLAN.md  DEEP_AUDIT_FIX_PLAN.md  DEEP_AUDIT_REPORT.md  DEMO_SCRIPT.md  DISASTER_RECOVERY.md  EMAIL-SERVICE-SETUP.md  END-TO-END-AUDIT-REPORT.md  FINAL-ALL-PHASES-COMPLETE.md  FINAL-AUDIT-PRODUCTION-READY.md  FINAL-COMPREHENSIVE-AUDIT.md  FINAL-IMPLEMENTATION-REPORT.md  FINAL-READY-FOR-COMMIT.md  FINAL-SESSION-SUMMARY-COMPLETE.md  FINAL-STATUS-CORS-FIXED.md  FINAL-STATUS-NO-BUGS.md  FOOD-DNA-PURPOSE.md  FRESH_AUDIT_REPORT.md  GOOGLE-OAUTH-SETUP-STEPS.md  GOOGLE-OAUTH-SETUP.md  IMPLEMENTATION-PROGRESS.md  LAUNCH_CHECKLIST.md  MEDIUM-LOW-PRIORITY-TRACKER.md  ONBOARDING-AUTH-ISSUES.md  ONBOARDING-FLOW-FIXES.md  PERSISTENT-AGENT-STRATEGY.md  PRE_EXISTING_FAILURES_REPORT.md  PRODUCTION-AGENT-ARCHITECTURE.md  PRODUCTION_LAUNCH_CHECKLIST.md  PRODUCTION_READINESS_AUDIT.md  QUICK-START.md  RECALCULATE-RATE-LIMIT-FIX.md  SETUP_GUIDE.md  (+18 more)
scripts/: _update_chart_markers.py  add_free_exercise_db.py  benchmark_fts.py  build_fts_index.py  chest_biomechanics.py  chest_descriptions.py  deploy-production.sh  download_exercise_images.py  download_new_exercise_images.py  enrich_exercisedb.py  enrich_from_free_db.py  enrich_global_seed.py  export-openapi.py  extend_exercise_schema.py  fill_animation_urls.py  fix_exercise_images.py  fix_exercise_urls.py  fix_fabricated_image_urls.py  generate_logo.py  generate_test_data.py  import_curated_usda.py  import_full_exercise_db.py  import_off.py  import_off_fast.py  import_off_top200k.py  import_usda_csv.py  import_usda_fast.py  import_wger.py  index_codebase.py  init_neon_db.py  lsp_helper.py  match_images_fuzzy.py  monitor_db_indexes.py  phase1_fk_cascade.py  phase2_timestamps.py  phase3_gin_indexes.py  phase4_checks.py  populate_glutes.py  populate_lats.py  populate_lats_data.py  (+26 more)
src/: main.py
tasks/: EXERCISE-UX-OVERHAUL-PLAN.md  FEATURE-EXPANSION-FINAL.md  FEATURE-EXPANSION-PLAN.md  FEATURE-IMPLEMENTATION-PLAN.md  IMPLEMENTATION-BLUEPRINT.md  LAUNCH-CHECKLIST.md  REMEDIATION-PLAN.md  ROLLOUT_PLAN.md  UI-BUGFIX-PLAN-V2.md  UI-BUGFIX-PLAN.md  UI-POLISH-PLAN.md  backend-audit-report.md  backend-hardening-plan.md  bug-bash-findings.md  contract-mismatches.md  e2e-test-plan.md  exercise-remediation-plan.md  fix-plan-phases-1-2.md  fix-plan-phases-3-4.md  todo.md  (+11 more)
(+1243 files in other folders)
