# Audit fix 10.22 — Dependency pinning strategy:
# Use pip-compile to generate a locked requirements file for reproducible builds.
# Run: pip-compile pyproject.toml -o requirements.lock
# Deploy from requirements.lock in production; keep pyproject.toml as the source of truth.
[project]
name = "repwise"
version = "0.1.0"
description = "Adaptive macro and strength-optimization platform"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0,<1.0.0",
    "python-multipart>=0.0.9,<1.0.0",
    "uvicorn[standard]>=0.30.0,<1.0.0",
    "gunicorn>=22.0.0,<24.0.0",
    "sqlalchemy[asyncio]>=2.0.0,<3.0.0",
    "asyncpg>=0.30.0,<1.0.0",
    "alembic>=1.14.0,<2.0.0",
    "pydantic>=2.0.0,<3.0.0",
    "pydantic-settings>=2.0.0,<3.0.0",
    # Audit fix 9.7 — removed unused passlib
    "bcrypt>=4.0.0,<5.0.0",  # Audit fix 9.7 — direct dependency (was transitive via passlib)
    "email-validator>=2.0.0,<3.0.0",
    "httpx>=0.27.0,<1.0.0",
    "boto3>=1.35.0,<2.0.0",
    "sentry-sdk[fastapi]>=2.0.0,<3.0.0",
    "google-auth>=2.0.0,<3.0.0",
    "PyJWT[crypto]>=2.8.0,<3.0.0",
    "redis>=5.0.0,<6.0.0",
    "posthog>=3.0.0,<4.0.0",
    "apscheduler>=3.10.0,<4.0.0",  # Audit fix 10.9 — pinned <4.0: v4 is a full rewrite with incompatible async API
    "markdown>=3.5.0,<4.0.0",
    "aiofiles>=24.0.0,<25.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "hypothesis>=6.100.0",
    "aiosqlite>=0.20.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "freezegun>=1.2.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.mypy]
python_version = "3.12"
strict = true
